--- a/signup.html
+++ b/signup.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js" defer></script>
+    <script src="/js/validation.js" defer></script>
     <title>Signup</title>
 </head>
 <body>
     <h1>Signup</h1>
 
-    <form action="process-signup.php" method="post">
+    <form action="process-signup.php" method="post" id="signup" novalidate>
         <div>
             <label for="name">Name</label>
             <input type="text" id="name" name="name" />
